TEST_PROGRAMS/INVALID/armin_taheri/invalid5.min
# no assignment inside a declaration

var pi: float = 3.14159265359;

